--- a/HoldTheLine/Properties/Resources.resx
+++ b/HoldTheLine/Properties/Resources.resx
@@ -148,6 +148,9 @@
   <data name="Lo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Lo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="NewIco" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\NewIco.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="NPCIdle" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\NPCIdle.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
